--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,126 @@
+
+
+
+* {
+  margin: 0;
+  box-sizing: border-box;
+    padding: 0px;
+}
+
+body {
+  background: #2C3E50;
+}
 .App {
-  text-align: center;
+  width: 100%;
+  height: 100vh;
+
+
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+
+
+.container{
+  background-color: white;
+ 
+  width: 40%;
+  height: 40%;
+  padding: 10%;
+  margin: 10%;
+  margin-left: 30%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.btn-container{
+  margin: auto;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin: 10px;
+  padding: 10px;
+
 }
 
-.App-link {
-  color: #61dafb;
+.sub-container{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.sub-container span {
+  background: #00ABA9;
+  color: #fff;
+  display: inline-block;
+  font-family: monospace;
+  font-size: 22px;
+  padding: 20px;
+  border-radius: 5px;
+  width: 80px;
+}
+
+.container-btn{
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+
+}
+.toggle-btn{
+padding: 5px;
+width: 12%;
+height: 40%;
+margin: 10px;
+border-radius: 10px;
+}
+
+
+.toggle-btn:hover{
+cursor: pointer;
+background-color: darkgray;
+}
+
+
+.stopwatch-btn {
+  background: #fff;
+  margin-top: 30px;
+  margin-left: 5px;
+  border: none;
+  padding: 12px 20px;
+  font-size: 16px;
+  text-transform: uppercase;
+  width: 150px;
+  transition: background 1s;
+  cursor: pointer;
+  margin: 10px;
+}
+
+.stopwatch-btn-red {
+  border: 2px solid #C85454;
+  color: #C85454;
+}
+
+.stopwatch-btn-yel {
+  border: 2px solid #FFC900;
+  color: #FFC900;
+}
+
+ .stopwatch-btn-gre {
+  border: 2px solid #00ABA9;
+  color: #00ABA9;
+}
+
+.stopwatch .stopwatch-btn-red:hover {
+  background: #C85454;
+  border: 2px solid #C85454;
+  color: #fff;
+}
+
+.stopwatch .stopwatch-btn-yel:hover {
+  background: #FFC900;
+  border: 2px solid #FFC900;
+  color: #fff;
+}
+
+
+.stopwatch .stopwatch-btn-gre:hover {
+  background: #00ABA9;
+  border: 2px solid #00ABA9;
+  color: #fff;
 }
